💄MT-838 fix card grid box alignment

--- a/src/scss/utilities/_layout.scss
+++ b/src/scss/utilities/_layout.scss
@@ -69,7 +69,7 @@
   @media only screen and (min-width: $breakpoint-large) {
     &--basis-3 {
       > * {
-        flex-basis: min(30rem, 31%);
+        flex: 0 0 calc(33.4% - 20px);
       }
     }
     &--basis-2 {
